# IGNITE-843 Bug fix: event list generats incorrectly.

--- a/modules/webconfig/nodejs/views/layout.jade
+++ b/modules/webconfig/nodejs/views/layout.jade
@@ -44,6 +44,7 @@ html(ng-app='ignite-web-configurator')
             script(src='https://cdnjs.cloudflare.com/ajax/libs/angular-smart-table/2.0.3/smart-table.js')
 
             script(src='/javascripts/controllers/common.js')
+            script(src='/javascripts/dataStructures.js')
 
             script(src='/javascripts/bundle.js')
     body.theme-line.body-overlap
