--- a/modules/webconfig/nodejs/views/clusters.jade
+++ b/modules/webconfig/nodejs/views/clusters.jade
@@ -34,7 +34,7 @@ block content
                         td.col-sm-6(ng-class='{active: row._id == selectedItem._id}')
                             a(ng-click='selectItem(row)') {{$index + 1}}. {{row.name}}, {{row.discovery.kind | displayValue:discoveries:'Discovery not set'}}
         button.btn.btn-primary(ng-click='createItem()' ng-disabled='!create.template') &nbspAdd cluster
-        span(style='margin-left: 15px; margin-right: 5px') Use template:&nbsp
+        label(style='margin-left: 15px; margin-right: 10px') Use template:
         button.btn.btn-default(ng-init='create.template = templates[0].value' ng-model='create.template' data-template='/select' data-placeholder='Choose cluster template' bs-options='item.value as item.label for item in templates' bs-select)
         i.tiplabel.fa.fa-question-circle(bs-tooltip data-title='{{joinTip(templateTip)}}' type='button')
         hr
@@ -65,5 +65,5 @@ block content
                 .panel-title
                     h3
                         a(bs-collapse-toggle='0' ng-click='expanded = !expanded;') {{expanded ? 'Hide advanced settings...' : 'Show advanced settings...'}}
-            button.btn.btn-primary(ng-disabled='inputForm.$invalid' ng-click='saveItem()') Save
+            button#save-btn.btn.btn-primary(ng-disabled='inputForm.$invalid' ng-click='saveItem()') Save
             button.btn.btn-primary(ng-show='backupItem._id' ng-click='removeItem()') Remove
