# IGNITE-843 Use text bot to select OS

--- a/modules/webconfig/nodejs/views/layout.jade
+++ b/modules/webconfig/nodejs/views/layout.jade
@@ -59,3 +59,4 @@ html(ng-app='ignite-web-configurator')
             include includes/footer
 
         block body-script
+            script(src='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.2/js/bootstrap.min.js')
