# ignite-843 Added group tip.

--- a/modules/webconfig/nodejs/public/stylesheets/style.less
+++ b/modules/webconfig/nodejs/public/stylesheets/style.less
@@ -826,6 +826,7 @@ label {
 }
 
 .tipLabel {
+  font-size: 14px;
   margin-left: 4px;
 }
 
@@ -943,7 +944,7 @@ input[type="number"] {
   -moz-appearance: textfield;
 }
 
-input.ng-dirty.ng-invalid {
+input.ng-invalid {
   border-color: #ec1c24;
 
   :focus {
