--- a/modules/webconfig/nodejs/views/caches.jade
+++ b/modules/webconfig/nodejs/views/caches.jade
@@ -55,6 +55,8 @@ block content
                             .panel-heading
                                 h3
                                     a(bs-collapse-toggle) {{group.label}}
+                                    i.tipLabel.fa.fa-question-circle(ng-if='group.tip' bs-tooltip='joinTip(group.tip)' type='button')
+                                    i.tipLabel.fa.fa-question-circle.blank(ng-if='!group.tip')
                             .panel-collapse(bs-collapse-target)
                                 .panel-body
                                     .settings-row(ng-repeat='field in group.fields')
